// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Gallery block cancels uploads (TC009 - Choose from device (stay in editor) - Cancel upload) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":null} -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":null} -->
<figure class=\\"wp-block-image\\"><img alt=\\"\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block changes columns setting (TC013 - Settings - Columns 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":3} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-3.jpeg\\" alt=\\"\\" class=\\"wp-image-3\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block changes columns setting (TC013 - Settings - Columns 2`] = `
"<!-- wp:gallery {\\"columns\\":2,\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-2 is-cropped\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":3} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-3.jpeg\\" alt=\\"\\" class=\\"wp-image-3\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block disables crop images setting (TC014 - Settings - Crop images 1`] = `
"<!-- wp:gallery {\\"imageCrop\\":false,\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block finishes pending uploads upon opening the editor (TC001 - Close/Re-open post with an ongoing image upload) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2001} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2001\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block handles failed uploads (TC006 - Choose from device (stay in editor) - Failed upload) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":1} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block inserts block 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block overrides "Link to" setting of gallery items (TC012 - Settings - Link to 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"media\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":1,\\"linkDestination\\":\\"media\\"} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-1\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2,\\"linkDestination\\":\\"media\\"} -->
<figure class=\\"wp-block-image\\"><img src=\\"file:///local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block rearranges gallery items (TC010 - Rearrange images in Gallery) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2002} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-3.jpeg\\" alt=\\"\\" class=\\"wp-image-2002\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2001} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2001\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block sets caption to gallery (TC003 - Add caption to gallery) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image --><figcaption class=\\"blocks-gallery-caption\\"><strong>Bold</strong> <em>italic</em> <s>strikethrough</s> gallery caption</figcaption></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block sets caption to gallery items (TC004 - Add caption to gallery images) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/><figcaption><strong>Bold</strong> <em>italic</em> <s>strikethrough</s> image caption</figcaption></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block successfully uploads items (TC005 - Choose from device (stay in editor) - Successful upload) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2001} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2001\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block takes a photo (TC007 - Take a photo) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block uploads from free photo library (TC008 - Choose from the free photo library) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2001} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2001\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;

exports[`Gallery block uploads from other apps (TC011 - Choose from Other Apps (iOS Files App) 1`] = `
"<!-- wp:gallery {\\"linkTo\\":\\"none\\"} -->
<figure class=\\"wp-block-gallery has-nested-images columns-default is-cropped\\"><!-- wp:image {\\"id\\":2000} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-1.jpeg\\" alt=\\"\\" class=\\"wp-image-2000\\"/></figure>
<!-- /wp:image -->

<!-- wp:image {\\"id\\":2001} -->
<figure class=\\"wp-block-image\\"><img src=\\"https://test-site.files.wordpress.com/local-image-2.jpeg\\" alt=\\"\\" class=\\"wp-image-2001\\"/></figure>
<!-- /wp:image --></figure>
<!-- /wp:gallery -->"
`;
